--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "fswatcher"
+name = "watcher-fs"
 version = "1.0.0"
 description = "A Python package for monitoring file system changes"
 readme = "README.md"
@@ -18,5 +18,11 @@ requires-python = ">=3.8"
 dependencies = []
 
 [project.urls]
-Homepage = "https://github.com/pavelkrupala/fswatcher"
-Documentation = "https://pavelkrupala.github.io/fswatcher"
+Homepage = "https://github.com/pavelkrupala/watcher-fs"
+Documentation = "https://pavelkrupala.github.io/watcher-fs"
+
+[tool.setuptools]
+packages = ["watcher_fs"]
+
+[tool.setuptools.package-dir]
+"watcher_fs" = "src/watcher_fs"
