--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,6 +1,7 @@
-pytest>=8.3.5
+-r requirements.txt
+pytest>=8.0
 pytest-sugar>=1.0.0
-Sphinx==8.2.3
-sphinx-rtd-theme==3.0.2
+Sphinx>=8.0
+sphinx-rtd-theme>=3.0.2
 twine==6.1.0
 build==1.2.2
