--- a/tox.ini
+++ b/tox.ini
@@ -7,5 +7,6 @@ basepython =
     py311: C:\Python311\python.exe
     py312: C:\Python312\python.exe
     py313: C:\Python313\python.exe
-deps = -r requirements-dev.txt
-commands = pytest test/
+deps =
+    -r requirements-dev.txt
+commands = pytest
