--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,12 +8,12 @@ version = "1.3"
 description = "A Python package for monitoring file system changes"
 readme = "README.md"
 authors = [{ name = "Pavel Křupala", email = "pavel.krupala@gmail.com" }]
-license = { file = "LICENSE" }
+license = "MIT"
+license-files = ["LICENSE"]
 classifiers = [
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
-    "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
 requires-python = ">=3.11"
